@@ -2,6 +2,8 @@
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
    openbsd-compat/daemon.c] Add includes needed by open(2).  Conditionally
    include paths.h.  Fixes build error on Solaris.
+ - (dtucker) [entropy.c] More fcntl.h, this time on AIX (and probably
+   others).
 
 20060710
  - (dtucker) [INSTALL] New autoconf version: 2.60.
@@ -4844,4 +4846,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4386 2006/07/11 08:00:06 dtucker Exp $
+$Id: ChangeLog,v 1.4387 2006/07/11 09:01:51 dtucker Exp $
